clusters/main/kubernetes/apps/gatus/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatus
  annotations:
    volsync.backube/privileged-movers: "true"
  labels:
    goldilocks.fairwinds.com/enabled: "true"
